fixed head size on small mobile devices

--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -404,7 +404,7 @@ section#contact {
 
 
   background-color: #fff5ed;
-  padding: 6px;
+  padding: 5px;
 
   border-radius: 50%;
 
@@ -415,8 +415,8 @@ section#contact {
   box-shadow: 0px 9px 11px -3px rgba(0, 0, 0, 0.44);
 
   @media (max-width: 660px) {
-    width: 50vw;
-    height: 50vw;
+    width: 35vw;
+    height: 35vw;
   }
 
   img {
